various implementation
